--- a/lectures/python/02_variables_and_functions/01_modules_and_packages.ipynb
+++ b/lectures/python/02_variables_and_functions/01_modules_and_packages.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -30,13 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Don't know how to reset  #, please run `%reset?` for details\n",
       "Fooing\n",
       "Barring\n"
      ]
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -140,14 +141,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['', '/home/simone/anaconda3/envs/python_env/lib/python36.zip', '/home/simone/anaconda3/envs/python_env/lib/python3.6', '/home/simone/anaconda3/envs/python_env/lib/python3.6/lib-dynload', '/home/simone/anaconda3/envs/python_env/lib/python3.6/site-packages', '/home/simone/anaconda3/envs/python_env/lib/python3.6/site-packages/IPython/extensions', '/home/simone/.ipython']\n"
+      "['', '/home/simone/anaconda3/lib/python36.zip', '/home/simone/anaconda3/lib/python3.6', '/home/simone/anaconda3/lib/python3.6/lib-dynload', '/home/simone/anaconda3/lib/python3.6/site-packages', '/home/simone/anaconda3/lib/python3.6/site-packages/IPython/extensions', '/home/simone/.ipython']\n"
      ]
     }
    ],
@@ -174,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -220,9 +221,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fooing from a package\n",
+      "Barring from a package\n"
+     ]
+    }
+   ],
    "source": [
     "%reset -f\n",
     "from my_package import foo_module,bar_module\n",
@@ -232,9 +242,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fooing from a package\n",
+      "Barring from a package\n"
+     ]
+    }
+   ],
    "source": [
     "%reset -f\n",
     "from my_package import *\n",
@@ -319,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
