--- a/lectures/python/02_variables_and_functions/02_functions.ipynb
+++ b/lectures/python/02_variables_and_functions/02_functions.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
        "145183092028285869634070784086308284983740379224208358846781574688061991349156420080065207861248000000000000000000"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -261,13 +261,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "__annotations__ is {'text': <class 'str'>, 'max_len': 'int>0', 'return': <class 'str'>}\n",
+      "__call__ is <method-wrapper '__call__' of function object at 0x7f6aa84e70d0>\n",
+      "__class__ is <class 'function'>\n",
+      "__closure__ is None\n",
+      "__code__ is <code object complicated_function at 0x7f6aa84d94b0, file \"<ipython-input-9-ab2ec88ee8c0>\", line 1>\n",
+      "__defaults__ is (80,)\n",
+      "__delattr__ is <method-wrapper '__delattr__' of function object at 0x7f6aa84e70d0>\n",
+      "__dict__ is {}\n",
+      "__dir__ is <built-in method __dir__ of function object at 0x7f6aa84e70d0>\n",
+      "__doc__ is documentation for complicated_function\n",
+      "__eq__ is <method-wrapper '__eq__' of function object at 0x7f6aa84e70d0>\n",
+      "__format__ is <built-in method __format__ of function object at 0x7f6aa84e70d0>\n",
+      "__ge__ is <method-wrapper '__ge__' of function object at 0x7f6aa84e70d0>\n",
+      "__get__ is <method-wrapper '__get__' of function object at 0x7f6aa84e70d0>\n",
+      "__getattribute__ is <method-wrapper '__getattribute__' of function object at 0x7f6aa84e70d0>\n",
+      "__globals__ is {'__name__': '__main__', '__doc__': 'Automatically created module for IPython interactive environment', '__package__': None, '__loader__': None, '__spec__': None, '__builtin__': <module 'builtins' (built-in)>, '__builtins__': <module 'builtins' (built-in)>, '_ih': ['', \"for i in dir(complicated_function):\\n    print(i,'is',eval('complicated_function.'+i))\", 'def hello():\\n    print(\"hello\")\\n    \\nprint(type(hello))\\n\\na = hello\\na()', 'def factorial(n):\\n    return 1 if n<2 else n * factorial(n-1)\\n\\nfactorial(77)', 'def abc(a,b,c):\\n    for i in (\\'a\\',\\'b\\',\\'c\\'):\\n        print(i,\"got\",eval(i)) #print name of variable, content of variable\\n\\nabc(\\'to_a\\', \\'to_b\\', \\'to_c\\')', \"abc(b = 'to_b', c = 'to_c', a = 'to_a')\", 'def abc_keyword_only(*,a,b,c):\\n    for i in (\\'a\\',\\'b\\',\\'c\\'):\\n        print(i,\"got\",eval(i))\\n\\n#abc_keyword_only(\\'to_a\\', \\'to_b\\', \\'to_c\\') # error\\nabc_keyword_only(b = \\'to_b\\', c = \\'to_c\\', a = \\'to_a\\')', \"def abc_with_default(a='default_a',\\n                     b='default_b',\\n                     c='default_c'):\\n    abc(a,b,c)\\n    \\nabc_with_default(b = 'to_b')\", \"def foo():\\n    '''\\n    string documenting foo(). \\n    accessible via help(foo)\\n    '''\\n    pass\\n\\nhelp(foo)\", \"def complicated_function(text:str, max_len:'int>0'=80) -> str:\\n    '''documentation for complicated_function'''\\n    pass\", 'help(complicated_function)', \"for i in dir(complicated_function):\\n    print(i,'is',eval('complicated_function.'+i))\"], '_oh': {3: 145183092028285869634070784086308284983740379224208358846781574688061991349156420080065207861248000000000000000000}, '_dh': ['/home/simone/Desktop/DSSC/material/advanced_programming-2018-19/lectures/python/02_variables_and_functions'], 'In': ['', \"for i in dir(complicated_function):\\n    print(i,'is',eval('complicated_function.'+i))\", 'def hello():\\n    print(\"hello\")\\n    \\nprint(type(hello))\\n\\na = hello\\na()', 'def factorial(n):\\n    return 1 if n<2 else n * factorial(n-1)\\n\\nfactorial(77)', 'def abc(a,b,c):\\n    for i in (\\'a\\',\\'b\\',\\'c\\'):\\n        print(i,\"got\",eval(i)) #print name of variable, content of variable\\n\\nabc(\\'to_a\\', \\'to_b\\', \\'to_c\\')', \"abc(b = 'to_b', c = 'to_c', a = 'to_a')\", 'def abc_keyword_only(*,a,b,c):\\n    for i in (\\'a\\',\\'b\\',\\'c\\'):\\n        print(i,\"got\",eval(i))\\n\\n#abc_keyword_only(\\'to_a\\', \\'to_b\\', \\'to_c\\') # error\\nabc_keyword_only(b = \\'to_b\\', c = \\'to_c\\', a = \\'to_a\\')', \"def abc_with_default(a='default_a',\\n                     b='default_b',\\n                     c='default_c'):\\n    abc(a,b,c)\\n    \\nabc_with_default(b = 'to_b')\", \"def foo():\\n    '''\\n    string documenting foo(). \\n    accessible via help(foo)\\n    '''\\n    pass\\n\\nhelp(foo)\", \"def complicated_function(text:str, max_len:'int>0'=80) -> str:\\n    '''documentation for complicated_function'''\\n    pass\", 'help(complicated_function)', \"for i in dir(complicated_function):\\n    print(i,'is',eval('complicated_function.'+i))\"], 'Out': {3: 145183092028285869634070784086308284983740379224208358846781574688061991349156420080065207861248000000000000000000}, 'get_ipython': <bound method InteractiveShell.get_ipython of <ipykernel.zmqshell.ZMQInteractiveShell object at 0x7f6aa9e95be0>>, 'exit': <IPython.core.autocall.ZMQExitAutocall object at 0x7f6aa8667710>, 'quit': <IPython.core.autocall.ZMQExitAutocall object at 0x7f6aa8667710>, '_': 145183092028285869634070784086308284983740379224208358846781574688061991349156420080065207861248000000000000000000, '__': '', '___': '', '_i': 'help(complicated_function)', '_ii': \"def complicated_function(text:str, max_len:'int>0'=80) -> str:\\n    '''documentation for complicated_function'''\\n    pass\", '_iii': \"def foo():\\n    '''\\n    string documenting foo(). \\n    accessible via help(foo)\\n    '''\\n    pass\\n\\nhelp(foo)\", '_i1': \"for i in dir(complicated_function):\\n    print(i,'is',eval('complicated_function.'+i))\", '_i2': 'def hello():\\n    print(\"hello\")\\n    \\nprint(type(hello))\\n\\na = hello\\na()', 'hello': <function hello at 0x7f6aa855f6a8>, 'a': <function hello at 0x7f6aa855f6a8>, '_i3': 'def factorial(n):\\n    return 1 if n<2 else n * factorial(n-1)\\n\\nfactorial(77)', 'factorial': <function factorial at 0x7f6aa855f730>, '_3': 145183092028285869634070784086308284983740379224208358846781574688061991349156420080065207861248000000000000000000, '_i4': 'def abc(a,b,c):\\n    for i in (\\'a\\',\\'b\\',\\'c\\'):\\n        print(i,\"got\",eval(i)) #print name of variable, content of variable\\n\\nabc(\\'to_a\\', \\'to_b\\', \\'to_c\\')', 'abc': <function abc at 0x7f6aa855f048>, '_i5': \"abc(b = 'to_b', c = 'to_c', a = 'to_a')\", '_i6': 'def abc_keyword_only(*,a,b,c):\\n    for i in (\\'a\\',\\'b\\',\\'c\\'):\\n        print(i,\"got\",eval(i))\\n\\n#abc_keyword_only(\\'to_a\\', \\'to_b\\', \\'to_c\\') # error\\nabc_keyword_only(b = \\'to_b\\', c = \\'to_c\\', a = \\'to_a\\')', 'abc_keyword_only': <function abc_keyword_only at 0x7f6aa84d6ea0>, '_i7': \"def abc_with_default(a='default_a',\\n                     b='default_b',\\n                     c='default_c'):\\n    abc(a,b,c)\\n    \\nabc_with_default(b = 'to_b')\", 'abc_with_default': <function abc_with_default at 0x7f6aaa4e8730>, '_i8': \"def foo():\\n    '''\\n    string documenting foo(). \\n    accessible via help(foo)\\n    '''\\n    pass\\n\\nhelp(foo)\", 'foo': <function foo at 0x7f6aa84d6b70>, '_i9': \"def complicated_function(text:str, max_len:'int>0'=80) -> str:\\n    '''documentation for complicated_function'''\\n    pass\", 'complicated_function': <function complicated_function at 0x7f6aa84e70d0>, '_i10': 'help(complicated_function)', '_i11': \"for i in dir(complicated_function):\\n    print(i,'is',eval('complicated_function.'+i))\", 'i': '__globals__'}\n",
+      "__gt__ is <method-wrapper '__gt__' of function object at 0x7f6aa84e70d0>\n",
+      "__hash__ is <method-wrapper '__hash__' of function object at 0x7f6aa84e70d0>\n",
+      "__init__ is <method-wrapper '__init__' of function object at 0x7f6aa84e70d0>\n",
+      "__init_subclass__ is <built-in method __init_subclass__ of type object at 0x55f9adfb4140>\n",
+      "__kwdefaults__ is None\n",
+      "__le__ is <method-wrapper '__le__' of function object at 0x7f6aa84e70d0>\n",
+      "__lt__ is <method-wrapper '__lt__' of function object at 0x7f6aa84e70d0>\n",
+      "__module__ is __main__\n",
+      "__name__ is complicated_function\n",
+      "__ne__ is <method-wrapper '__ne__' of function object at 0x7f6aa84e70d0>\n",
+      "__new__ is <built-in method __new__ of type object at 0x55f9adfb4140>\n",
+      "__qualname__ is complicated_function\n",
+      "__reduce__ is <built-in method __reduce__ of function object at 0x7f6aa84e70d0>\n",
+      "__reduce_ex__ is <built-in method __reduce_ex__ of function object at 0x7f6aa84e70d0>\n",
+      "__repr__ is <method-wrapper '__repr__' of function object at 0x7f6aa84e70d0>\n",
+      "__setattr__ is <method-wrapper '__setattr__' of function object at 0x7f6aa84e70d0>\n",
+      "__sizeof__ is <built-in method __sizeof__ of function object at 0x7f6aa84e70d0>\n",
+      "__str__ is <method-wrapper '__str__' of function object at 0x7f6aa84e70d0>\n",
+      "__subclasshook__ is <built-in method __subclasshook__ of type object at 0x55f9adfb4140>\n"
+     ]
+    }
+   ],
    "source": [
     "for i in dir(complicated_function):\n",
     "    print(i,'is',eval('complicated_function.'+i))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -286,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
