--- a/lectures/python/02_variables_and_functions/07_classes.ipynb
+++ b/lectures/python/02_variables_and_functions/07_classes.ipynb
@@ -37,7 +37,7 @@
     "        \n",
     "    def nope_update(self, a, b): \n",
     "        x = a     #forgetting self does not give error: it just creates local variables x and y\n",
-    "        y = b     #but does not change the value of x or y=>bugs, no error! REMEMBER SELF BITCH!\n",
+    "        y = b     #but does not change the value of x or y=>bugs, no error!\n",
     "    \n",
     "    def print(self): # is this pythonic?Nope\n",
     "        print(self.x, self.y)\n",
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
