--- a/lectures/python/03_advanced_topics/01_decorators.ipynb
+++ b/lectures/python/03_advanced_topics/01_decorators.ipynb
@@ -68,7 +68,7 @@
     "#time this DEFINE and creates a closure: a class object: u give a function to time_this, it creates a new\n",
     "#function and returns it. If you do \n",
     "    #hello = decorate1(hello)\n",
-    "#steps: decorate1 receives hello, define a closure function(?) and returns it. Then u reassign this to hello\n",
+    "#steps: decorate1 receives hello, define a closure and returns it. Then u reassign this to hello\n",
     "#So now using \"hello\" u are calling the object created by the decorator"
    ]
   },
@@ -431,7 +431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
