--- a/lectures/python/01_intro/07_functions.ipynb
+++ b/lectures/python/01_intro/07_functions.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,24 +27,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Positional: ('1st', '2nd', '3rd')\tKeywords: {}\n"
+      "Positional: ('1st', '2nd', '3rd')\tKeywords: {}\n",
+      "Positional: (0,)\tKeywords: {'par1': 1}\n"
      ]
     }
    ],
    "source": [
-    "foo('1st', '2nd', '3rd')"
+    "foo('1st', '2nd', '3rd')\n",
+    "c=list()\n",
+    "foo(a,par1=b,*c)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +131,7 @@
        "(0, 1, [2, 3, 4])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
