--- a/lectures/python/02_variables_and_functions/05_copy_deepcopy.ipynb
+++ b/lectures/python/02_variables_and_functions/05_copy_deepcopy.ipynb
@@ -10,32 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "l = [1,2,[4,5,6], 8]\n",
     "o = l"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "o == l #comparison by value"
    ]
   },
   {
@@ -55,21 +35,41 @@
     }
    ],
    "source": [
-    "o is l #comparison by memory adress"
+    "o == l #comparison by value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(140675894947208, 140675954968520)"
+       "True"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "o is l #comparison by memory adress"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(140390606122888, 140390606122888)"
+      ]
+     },
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
        "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        "False"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
      "output_type": "stream",
      "text": [
       "[1, 2, [4, 5, 6], 8, 9, 9]\n",
-      "[1, 2, [4, 5, 6], 8, 9]\n"
+      "[1, 2, [4, 5, 6], 8]\n"
      ]
     }
    ],
@@ -150,15 +150,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, [4, 5, 6, 7, 888, 7], 8, 9, 9]\n",
-      "[1, 2, [4, 5, 6, 7, 888, 7], 8, 9, 9]\n"
+      "[1, 2, [4, 5, 6, 7], 8, 9, 9]\n",
+      "[1, 2, [4, 5, 6, 7], 8]\n"
      ]
     }
    ],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,20 +179,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, [4, 5, 6, 7, 888, 7, 888, 888], 8, 9, 9]\n",
-      "[1, 2, [4, 5, 6, 7, 888, 7, 888, 888], 8, 9, 9]\n"
+      "[1, 2, [4, 5, 6, 7, 888], 8, 9, 9]\n",
+      "[1, 2, [4, 5, 6, 7, 888], 8, 9, 9]\n"
      ]
     }
    ],
    "source": [
-    "o = copy.copy(l) #shallowe copy\n",
+    "o = copy.copy(l) #shallow copy\n",
     "l[2].append(888)\n",
     "print(l)\n",
     "print(o)"
@@ -200,15 +200,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, [4, 5, 6, 7, 888, 7, 888, 888, 3333], 8, 9, 9]\n",
-      "[1, 2, [4, 5, 6, 7, 888, 7, 888, 888], 8, 9, 9]\n"
+      "[1, 2, [4, 5, 6, 7, 888, 3333], 8, 9, 9]\n",
+      "[1, 2, [4, 5, 6, 7, 888], 8, 9, 9]\n"
      ]
     }
    ],
@@ -219,6 +219,13 @@
     "print(o)\n",
     "#when u invoke a function u PASS BY SHARING: you pass a shallow copy"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -237,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
